--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "outport",
   "version": "1.0.1",
-  "main": "index.js",
+  "main": "dist/generateDocumentation.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@types/node": "^22.1.0",
+    "typescript": "^5.5.4"
+  }
 }
