--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "copyfiles": "^2.4.1",
     "express": "^4.19.2",
     "typescript": "^5.5.4"
+  },
+  "peerDependencies": {
+    "express": ">=4.0.0 || >=5.0.0-beta"
   }
 }
