--- a/package.json
+++ b/package.json
@@ -28,5 +28,13 @@
   },
   "peerDependencies": {
     "express": ">=4.0.0 || >=5.0.0-beta"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/GMShahzaib/outport.git"
+  },
+  "bugs": {
+    "url": "https://github.com/GMShahzaib/outport/issues"
+  },
+  "homepage": "https://github.com/GMShahzaib/outport#readme"
 }
