--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
+    "declarationDir": "./dist",
+    "moduleResolution": "node",
     "typeRoots": [
       "./node_modules/@types"
     ],
