--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "outport",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "type": "module",
@@ -15,7 +15,7 @@
   "scripts": {
     "copy-files": "copyfiles -u 1 \"src/public/**/*.{html,png,css}\" dist/",
     "create-cjs-file": "npx rollup dist/index.js --file dist/index.cjs --format cjs --external express,path,url",
-    "build": "tsc  --declaration --emitDeclarationOnly && npm run create-cjs-file && npm run copy-files",
+    "build": "tsc && npm run create-cjs-file && npm run copy-files",
     "prepublishOnly": "npm run build"
   },
   "keywords": [
