--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
       "default": "./lib/index.js"
     },
     "require": {
-      "types": "./lib/index.d.cts",
+      "types": "./lib/index.d.ts",
       "default": "./lib/index.cjs"
     }
   },
@@ -21,8 +21,8 @@
   "scripts": {
     "copy-files": "copyfiles -u 1 \"src/public/**/*.{html,png,css}\" lib/",
     "create-cjs-file": "npx rollup lib/index.js --file lib/index.cjs --format cjs --external express,path,url",
-    "create-cts-file": "ts-node scripts/create.cts.js",
-    "build": "tsc && npm run create-cjs-file && npm run copy-files && npm run create-cts-file",
+    "create-cts-file": "node scripts/create.cts.js",
+    "build": "tsc && npm run create-cjs-file && npm run create-cts-file && npm run copy-files",
     "prepublishOnly": "npm run build"
   },
   "keywords": [
