--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "outport",
+  "name": "@GMShahzaib/outport",
   "version": "1.1.18",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
