docs: rewrite README and CONTRIBUTING for v1.2.0 release
README.md:
- Add npm badges (version, downloads, license)
- Add screenshot of documentation UI
- Add complete API reference with configuration tables
- Add examples for all features (path params, query params, JSON body, form upload, headers, multiple servers)
- Add Playground documentation
- Add CommonJS usage example
- Add TypeScript support section with type imports
- Add full Express integration example
- Remove broken demo link

CONTRIBUTING.md:
- Add missing npm run build step
- Add project structure diagram
- Add clearer development workflow
- Add code style and PR guidelines
- Add testing checklist

package.json:
- Bump version to 1.2.0
- Add keywords for npm discoverability
- Add screenshot.png to files array

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "outport",
-  "version": "1.1.18",
+  "version": "1.2.0",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "type": "module",
@@ -16,7 +16,8 @@
   },
   "files": [
     "lib/",
-    "README.md"
+    "README.md",
+    "screenshot.png"
   ],
   "scripts": {
     "copy-files": "copyfiles -u 1 \"src/public/**/*.{html,png,css}\" lib/",
@@ -31,7 +32,11 @@
     "api testing",
     "api documentation",
     "express middleware",
-    "swagger alternative"
+    "swagger alternative",
+    "rest api",
+    "api explorer",
+    "postman alternative",
+    "openapi"
   ],
   "contributors": [
     {
