chore: exclude screenshot from npm package
Host screenshot on GitHub and link via raw URL to reduce npm package size.

--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   },
   "files": [
     "lib/",
-    "README.md",
-    "screenshot.png"
+    "README.md"
   ],
   "scripts": {
     "copy-files": "copyfiles -u 1 \"src/public/**/*.{html,png,css}\" lib/",
